objects/TriggerHandlerMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>HandlerClassName__c</fullName>
        <label>Handler Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SobjectApiName__c</fullName>
        <label>Sobject API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Trigger Handler Mapping</label>
    <pluralLabel>Trigger Handler Mapping</pluralLabel>
</CustomObject>